# flap-system-identification

./: .claude_resources.json  .claude_resources_exp3.json  .codex_resources_20260604_tail_moment.json  .codex_resources_prior_vs_tcn.json  .codex_resources_smooth_stall.json  .gitattributes  .gitignore  AGENTS.md  pyproject.toml
docs/: 2026-03-23-flapping-aircraft-metadata-contract-draft.md  2026-03-23-flapping-dataset-contract-draft.md  2026-03-23-flapping-system-identification-overview-and-plan.md  2026-03-23-ulg-to-canonical-parquet-preprocessing-spec.md  PROJECT_STATE.md
scripts/: analyze_component_residual_attribution.py  analyze_delaurier_residual_conditions.py  analyze_delaurier_residual_frequency.py  analyze_delaurier_residual_phase.py  analyze_lateral_retained_energy.py  analyze_nested_prior_shaping_ablation_exp1_diagnostics.py  analyze_prior_nonlinear_calibration_exp3_diagnostics.py  analyze_prior_regression_calibration_exp2_diagnostics.py  analyze_wing_wrench_theta_sweep.py  audit_force_discrepancy_attribution.py  audit_ratio8_artifact_lineage.py  audit_ratio8_phase_frequency.py  build_cycle_block_split.py  build_delaurier_residual_kfold_splits.py  build_delaurier_residual_split.py  build_fyb_smoothed_label_split.py  build_lateral_smoothed_label_split.py  build_level2_replay_ready_table.py  build_log_split.py  build_longitudinal_correction_ready_dataset.py  build_smoothed_label_split.py  build_time_aligned_smoothed_label_split.py  diagnose_delaurier_prior_conventions.py  diagnose_fyb_learnability.py  diagnose_label_noise.py  diagnose_removed_wrench_structure.py  (+46 more)
(+262 files in other folders)
